--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="h-svh bg-slate-100 dark:bg-slate-800 mat-typography">
+<body class="h-svh bg-slate-100 dark:bg-slate-700">
   <app-root></app-root>
 </body>
 </html>
